[B]Version 1.1.13[/B]
MyFreeCams - Add Pagination & Tags